--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Trivia Quiz Game",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,13 @@
   },
   "homepage": "https://github.com/Zakarya-Mks/trivia-quiz-game#readme",
   "devDependencies": {
-    "prettier": "^2.0.5"
-  }
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-loader": "^8.1.0",
+    "prettier": "^2.0.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {}
 }
